{
  "version": 4,
  "terraform_version": "1.3.0",
  "serial": 49,
  "lineage": "40bd7583-2ced-204f-1cc0-f7ceeb8d32e8",
  "resources": [
    {
      "module": "module.alb_autoscaling",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "terramino_instance",
      "provider": "module.alb_autoscaling.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:481450237232:security-group/sg-024e171e23f6dfdef",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-071568a1a2de27036"
                ],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-024e171e23f6dfdef",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-071568a1a2de27036"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "learn-asg-terramino-instance",
            "name_prefix": "",
            "owner_id": "481450237232",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {
              "hashicorp-learn": "aws-asg1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b1fe699826ac5405"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb_autoscaling.aws_security_group.terramino_lb",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.alb_autoscaling",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "terramino_lb",
      "provider": "module.alb_autoscaling.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:481450237232:security-group/sg-071568a1a2de27036",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-071568a1a2de27036",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "learn-asg-terramino-lb",
            "name_prefix": "",
            "owner_id": "481450237232",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {
              "hashicorp-learn": "aws-asg1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b1fe699826ac5405"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:481450237232:internet-gateway/igw-0fce20760da1f8a3a",
            "id": "igw-0fce20760da1f8a3a",
            "owner_id": "481450237232",
            "tags": {
              "Name": "main-vpc"
            },
            "tags_all": {
              "Name": "main-vpc",
              "hashicorp-learn": "aws-asg1"
            },
            "vpc_id": "vpc-0b1fe699826ac5405"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:481450237232:subnet/subnet-0acef093e057cb91f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0acef093e057cb91f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "481450237232",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "main-vpc-public-us-east-1a"
            },
            "tags_all": {
              "Name": "main-vpc-public-us-east-1a",
              "hashicorp-learn": "aws-asg1"
            },
            "vpc_id": "vpc-0b1fe699826ac5405"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:481450237232:subnet/subnet-0aec3dcb6faed674f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0aec3dcb6faed674f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "481450237232",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "main-vpc-public-us-east-1b"
            },
            "tags_all": {
              "Name": "main-vpc-public-us-east-1b",
              "hashicorp-learn": "aws-asg1"
            },
            "vpc_id": "vpc-0b1fe699826ac5405"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:481450237232:subnet/subnet-0586eb0c7f1fee5bf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0586eb0c7f1fee5bf",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "481450237232",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "main-vpc-public-us-east-1c"
            },
            "tags_all": {
              "Name": "main-vpc-public-us-east-1c",
              "hashicorp-learn": "aws-asg1"
            },
            "vpc_id": "vpc-0b1fe699826ac5405"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:481450237232:vpc/vpc-0b1fe699826ac5405",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-010e0cf084f9c7186",
            "default_route_table_id": "rtb-02935798b9e7c4fd7",
            "default_security_group_id": "sg-027cf97219e6d6ade",
            "dhcp_options_id": "dopt-03e1e7e9238fe30ad",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0b1fe699826ac5405",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-02935798b9e7c4fd7",
            "owner_id": "481450237232",
            "tags": {
              "Name": "main-vpc"
            },
            "tags_all": {
              "Name": "main-vpc",
              "hashicorp-learn": "aws-asg1"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}